--- a/bindu.tex
+++ b/bindu.tex
@@ -613,20 +613,429 @@ Now the central fixation is taught. White-coloured or also yellow-coloured or re
  śvetādivarṇanavakhaṇḍasucandrasūryasaudāminīvahniśikhena bimbāt | \\
  jvalan nabho vā sthalahīnam ekaṃ vilakṣayet tat khalu madhyalakṣyam 4.48 ||
  \end{quote}
-``(47cd) Hear now the central target taught by the ancient sages. \\
-(48) Through the image consisting of rays of fire, lightning, sun, moon, and nine [different] colors such as white, etc., one should fixate on the luminous ether or on that which is locationless. Verily, this is the central goal.''
-In the \citetitle{advaya} 7 (Ed. pp. 4-5) one reads: \begin{quote}
-atha madhyalakṣyalakṣaṇaṃ prātaścitrādivarṇākhaṇḍasūryacakravat vahnijvālāvalīvat tadvihīnāntarikṣavat paśyati | tadākārākāritayā avatiṣṭhati | tadbhūyodarśanena guṇarahitākāśaṃ bhavati | visphurattārakākāradīpyamānagāḍhatamopamaṃ paramākāśaṃ bhavati | kālānalasamadyotamānaṃ mahākāśaṃ bhavati | sarvotkṛṣṭaparamadyutipradyotamānaṃ tattvākāśaṃ bhavati | koṭisūryaprakāśavaibhavasaṃkāśaṃ sūryākāśaṃ bhavati | evaṃ bāhyābhyantarasthavyomapañcakaṃ tārakalakṣyam | taddarśī vimuktaphalas tādṛgvyomasamāno bhavati | tasmāt tāraka eva lakṣyaṃ amanaskaphalapradaṃ bhavati || 7 ||\end{quote}
-\begin{quote}
-  Then, the description of Intermediate Introspection: He sees, at daybreak, like the vast disc of the Sun resplendent with variegated and other colours, like a huge conflagration of Fire and like the mid-etherial regions devoid of these. He stands with a form identical with theirs. By seeing them over and over again, there ensues Ether devoid of qualities; there ensues transcendent Ether resembling palpable darkness brought into relief by the splendour of the radiant Tāraka form; there ensues the great Ether shining like the fire of deluge; there ensues the Tattvākāśa (Ether of Verity) effulgent with transcendent lustre excelling; and there ensues the Ether of Sun dazzling with the splendour of a hundred thousand Suns. Thus the five Ethers, external and internal, become visible to the Introspection of a Tāraka-yogin. He who sees it, released from fruits, becomes like such Ether. Hence the Introspectuion of Tāraka alone becomes the bestower of the fruit of non-mindedness.  
-(\citeauthor[1938:4]{yogaupaniṣads})
-\end{quote}
-}
+``(47cd) Hear now the central target taught by the ancient sages. (48) Through the image consisting of rays of fire, lightning, sun, moon, and nine [different] colors such as white, etc., one should fixate on the luminous ether or on that which is locationless. Verily, this is the central fixation.''}
 While abiding in the fixation, the burning of the impurity in the centre of the mind arises. The Sattva quality of the mind becomes revealed.\footnote{The generation of the sattvic quality through the practice of \textit{madhyalakṣ(y)a} also appears in \citetitle{sarvangayoga} 3.28: \begin{quote}madhya lakṣa mana madhya bicārai | vapu pramāna koi rūpa nihārai |\\
 yāte sātvik upajai āī | madhya lakṣa jo sādhai bhāī || 28 ||\end{quote} ``The central Lakṣa directs the mind to reside at its center, revealing the true form of the body. It produces a sattvic quality in those who practice it.'' (28)} After this has happened, the person abides in supreme bliss.   
 \end{tlate}
   \end{translation}
 \end{alignment}
+%\ekdpb*{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%PAGEBREAK%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%PAGEBREAK%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%PAGEBREAK%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+\begin{alignment}[
+  texts=edition[class="edition"];
+  translation[class="translation"],
+  ]
+  \begin{edition}
+    \ekddiv{type=ed}
+    \centerline{\textrm{\small{[\uproman{27}.\textsuperscript{\coro{\lowroman{1}-\lowroman{12}}}The Divisions of Space]}}}
+    \label{madhyalakṣya}
+\bigskip
+\begin{prose}
+ \noindent
+%-----------------------------
+%idānīm-ākāśabhedāḥ kathyante/ \E
+%idānīm ākaśabhedāḥ kathyaṃte   \P
+%idānīṃ ākaśabhedāḥ kathyaṃte/ \B
+%idānīṃ ākaśabhedāḥ kathyate/  \L
+%idānīṃ ākaśabhedāḥ kathyaṃte/ \N1
+%idānīṃ ākaśabhedāḥ kathyaṃte// \D
+%idānīṃ ākāśabhedāḥ kathyate/  \N2
+%idānīṃ ākāśabhedāḥ kathyaṃte  \U1
+%idānīm ākāśabhedāḥ kathyate// \U2
+%-----------------------------
+%Now the divisions of space are taught. 
+%-----------------------------
+   \note[type=source, labelb=185, lem={\textbf{Re}}]{PT\textsuperscript{qcr \cdot YSV} (Ed. p. 839): kathyate tu devyadhunākāśaṃ pañcabhirlakṣaṇaiḥ | ākāśan tu mahākāśaṃ parākāśaṃ parātparam | tattvākāśaṃ sūryakāśamākāśaṃ pañcalakṣaṇam |}
+\note[type=source, labelb=185, lem={\textbf{Re}}]{PT\textsuperscript{qcr \cdot YSV} (Ed. p. 839) = YK\textsuperscript{ccn \cdot YSV} 1.37 (Ed. p. 26): ākāśan tu mahākāśaṃ parākāśaṃ parātparam | tattvākāśaṃ sūryakāśamākāśaṃ pañcalakṣaṇam |}
+\note[type=testium, labelb=186, lem={\textbf{Ri}}]{SSP 2.30 (Ed. p. 42): ākāśaṃ parākāśaṃ mahākāśaṃ tatvākaśaṃ sūryākāśamiti vyomapañcakam | bāhyābhyantare 'tyantaṃ nirmalaṃ nirākāraṃ ākāśaṃ lakṣayet |}
+\app{\lem[wit={E,P,U2},alt={idānīm}]{idānī\skp{m-ā}}
+  \rdg[wit={ceteri}]{idānīṃ}
+}\skm{m-ā}kāśabhedāḥ
+\app{\lem[wit={ceteri}]{kathyante}
+  \rdg[wit={L,N2,U2}]{kathyate}}/
+%-----------------------------SSP!
+%te                          ākāśaḥ paramākāśaḥ mahākāśaḥ tattvākāśaḥ sūryākāśaḥ/    bāhyābhyantare nirmalaṃ nirākāram ākāśa---lakṣyaṃ  karttavyam/ \E
+%teṣāṃ lakṣyāni ca kathyaṃte ākāśaḥ parākāśaḥ mahākāśaḥ tatvākāśaḥ sūryakāśaḥ        bāhyābhyaṃtare nirmalaṃ nirākāram ākāśaṃ  lakṣyaṃ  karttavyaṃ  \P
+%                            ākāśaḥ paramākāśaḥ// mahākāśa// tattvākāśaḥ sūryākāśa// bāhyābhyaṃtaro nirmalaṃ nirākāram ākāśaṃ  lakṣaṃ   kartavyaṃ// \B
+%                            ākāśaḥ paramākāśaḥ// mahākāśaḥ tattvākāśaḥ sūryākāśaḥ   bāhyābhyaṃtare nirmalaṃ nirākāram ākāśaṃ  lakṣaṃ   kartavyaṃ// \L
+%teṣāṃ lakṣyāni  kathyate//  ākāśa, parākāśa,mahākāśa,tatvākāśa,sūryakāśa//          bāhyābhyaṃtare nirmalaṃ nirākāraṃ ākāśa---lakṣyaṃ  kartavyaṃ// \N1
+%teṣāṃ lakṣyāṇi  kathyaṃte// ākāśa--parākāśamahākāśatatvākāśasūryakāśa               bāhyābhyaṃtare nirmalaṃ nirākāraṃ ākāśa---lakṣyaṃ  karttavyaṃ// \D   %%%p.11 verso
+%teṣāṃ lakṣaṇāni kathyate//  ākāśa--parākāśamahākāśatatvākāśasūryakāśaḥ              bāhyābhyaṃtare nirmalaṃ nirākāraṃ ākāśa---lakṣaṇaṃ kartavyaṃ// \N2
+%ṣāṃ   lakṣyāṇi  kathyaṃte   ākāśa--parākāśamahākāśatatvākāśasūryakāśa---------------bāhyābhyaṃtare nirmalaṃ nirākāraṃ ākāśa---lakṣyaṃ  karttavyaṃ  \U1
+%teṣāṃ lakṣyāni  kathyaṃte// ākāśaḥ parākāśa// mahākāśaḥ// tatvākāśaḥ// sūryakāśaḥ// bāhyābhyaṃtare nirmalaṃ nirākāraṃ mākāśaṃ lakṣyaṃ  karttavyaṃ// \U2
+%-----------------------------
+%The fixations of them are taught: Space, beyond space, great space, space of reality, the space of the sun. The fixation onto the pure and formless space \textit{akāśa} shall be done internally as well as externally.  
+%-----------------------------SSP!
+\app{\lem[wit={ceteri}]{teṣāṃ}
+  \rdg[wit={E}]{te}
+  \rdg[wit={U1}]{ṣaṃ}}
+\app{\lem[wit={ceteri}]{lakṣyāni}
+  \rdg[wit={N2}]{lakṣaṇāni}}
+\app{\lem[wit={D,U1,U2}]{kathyante}
+  \rdg[wit={P}]{ca kathyante}
+  \rdg[wit={N1,N2}]{kathyate}}/
+\note[type=philcomm, labelb=186a, lem={\uproman{27}\textsuperscript{\lowroman{2}}}]{Sentence \om in \getsiglum{B} and \getsiglum{L}. \getsiglum{E} preserves only the first \textit{akṣara} ``te'' and omits the rest.}
+\app{\lem[wit={B,E,L,P}]{ākāśaḥ}
+  \rdg[wit={D,N1,N2,U1}]{ākāśa°}}\dd{}
+\app{\lem[wit={B,E,L}]{paramākāśaḥ}
+  \rdg[wit={P,U2}]{parākāśaḥ}
+  \rdg[wit={N1}]{parākāśa}
+  \rdg[wit={D,N2,U1}]{parākāśa°}}\dd{}
+\app{\lem[wit={E,L,P,U2}]{mahākāśaḥ}
+  \rdg[wit={B,N1}]{mahākāśa}
+  \rdg[wit={D,N2,U1}]{mahākāśa°}}\dd{}
+\app{\lem[wit={B,E,L,U2}]{tattvakāśaḥ}
+  \rdg[wit={N1}]{tatvakāśa}
+  \rdg[wit={D,N2,U1}]{tatvakāśa°}}\dd{}
+\app{\lem[wit={B,E,L}]{sūryākāśaḥ}
+  \rdg[wit={N2,P,U2}]{sūryakāśaḥ}
+  \rdg[wit={N1}]{sūryakāśa}
+  \rdg[wit={D,U1}]{sūryakāśa°}}\dd{}
+bāhyābhyantare nirmalaṃ nirākāram
+\app{\lem[wit={ceteri},alt={ākāśa°}]{ākāśa}
+  \rdg[wit={U2}]{mākāśaṃ}
+  \rdg[wit={B,L,P}]{ākāśaṃ}
+}\app{\lem[wit={ceteri}, alt={°lakṣyaṃ}]{lakṣyaṃ}
+  \rdg[wit={B,L}]{lakṣaṃ}
+  \rdg[wit={N2}]{°lakṣaṇaṃ}}
+kartavya\app{\lem[wit={E}]{kartavyam}
+  \rdg[wit={ceteri}]{kartavyaṃ}}\dd{}
+%-----------------------------
+%tataḥ paraṃ bāhyābhyantare  ṣvanandhakārasadṛśaṃ   parākāśaikyaṃ lakṣyaṃ  karttavyam// \E
+%tataḥ paraṃ bāhyābhyantarai ghanāṃdhakāraṃ sadṛśa--parākāśasya   lakṣyaṃ  karttavyam \P
+%tataḥ paraṃ bāhyābhyaṃtare  ghanāṃghakārasadṛśaḥ   parākāśa------lakṣaṃ   kartavyaṃ// \B
+%tataḥ paraṃ bāhyābhyaṃtare        dhakārasadṛśaḥ   parākāśa------lakṣaṃ   kartavyaṃ... \L %%%%%%%%%%%%%%%%%ghana hier = dunkel, schwarz%%%% andhakāra=  finster, dunkel. Finsterniss
+%tataḥ paraṃ bāhyābhyantare  ghanāṃdhakārasadṛśa----parākāśasya   lakṣyaṃ  kattavyam// \N1
+%tataḥ paraṃ bāhyābhyantare  ghanāṃdhakārasadṛśa----parākāśasya   lakṣyaṃ  kattavyaṃ// \D
+%tataḥ paraṃ bāhyābhyantare  ghanāṃdhakārasadṛśa----parākāśasya   lakṣaṇaṃ karttavyam// \N2
+%tataḥ paraṃ bāhyābhyantare  ghanāṃdhakārasadṛśa----parākāśasya   lakṣyaṃ  karttavyaṃ \U1
+%tataḥ       bāhyābhyantare  ghanāṃdhakārasadṛśaṃ   parākāśasya   lakṣaṃ   karttavyaṃ// \U2
+%-----------------------------
+%Moreover, the fixation of the beyond-space \textit{parākāśa} which is equal to dense darkness shall be done internally and externally.
+%-----------------------------SSP!
+\note[type=source, labelb=187, lem={\textbf{Re}}]{PT\textsuperscript{qcr \cdot YSV} (Ed. p. 839): sabāhyābhyantare nityaṃ nirākāśantu (\textit{nirākāśas tu} YK\textsuperscript{ccn \cdot YSV} 2.38 Ed. p. 26) nirmalam | karttavyaṃ lakṣam ākāśaṃ sādhayet sādhanaṃ vinā | ghanāntarālasadṛśaṃ parākāśaṃ tathaiva ca |}
+tataḥ
+\app{\lem[wit={ceteri}]{paraṃ}
+  \rdg[wit={U2}]{\om}}
+\note[type=testium, labelb=188, lem={\textbf{Ri}}]{SSP 2.30 (Ed. p. 42): atha vā bāhyābhyantare 'tyantāndhakāranibhaṃ parākāśam avalokayet |}
+\app{\lem[wit={ceteri}]{bāhyābhyantare}
+  \rdg[wit={P}]{bāhyābhyantarai}}
+\app{\lem[wit={ceteri},alt={ghanāndha°}]{ghanāndha}
+  \rdg[wit={B}]{ghanāṃgha°}
+  \rdg[wit={E}]{ṣvanandha°}
+  \rdg[wit={L}]{dha°}
+}\app{\lem[wit={ceteri},alt={°kāra°}]{kāra}
+  \rdg[wit={P}]{°kāraṃ}
+}\app{\lem[wit={ceteri},alt={°sadṛśa°}]{sadṛśa}
+  \rdg[wit={E,U2}]{sadṛśaṃ}
+  \rdg[wit={B,L}]{sadṛśaḥ}
+}\app{\lem[wit={ceteri}]{parākāśasya}
+  \rdg[wit={E}]{parākāśaikyaṃ}
+  \rdg[wit={B,L}]{parākāśa°}}
+\app{\lem[wit={ceteri}]{lakṣyaṃ}
+  \rdg[wit={B,L,U2}]{lakṣaṃ}
+  \rdg[wit={N2}]{lakṣaṇaṃ}}
+kartavyaṃ/\textsuperscript{\begin{otherlanguage}{english}\coro{[\lowroman{5}]}\end{otherlanguage}}
+%-----------------------------
+%tataḥ paraṃ pralayakālīna--jvalad-dāvā---nala-pūrṇaṃ  bāhyābhyantare, mahākāśalakṣyaṃ karttavyam/ \E
+%tataḥ paraṃ pralayakālīna--jalad--vaḍavā-nala-pūrṇaṃ  bāhyābhyaṃtare  mahākāśaṃ lakṣyaṃ karttavyaṃ \P
+%tataḥ paraṃ pralayakālīnaḥ jalad--vaḍavā-nala-pūrṇaṃ  bāhyābhyaṃtare  mahākāśalakṣaṃ kartavyaṃ// \B
+%tataḥ paraṃ pralayakālīnaḥ jvalad-vaḍavā-nala-pūrṇaṃ  bāhyābhyaṃtare  mahākāśalakṣaṃ kartavyaṃ// \L
+%tataḥ paraṃ pralayakālīna--jvalad-vṛddha-nala-pūrṇa---bāhyābhyaṃtare  mahākāśalakṣyaṃ karttavyaṃ// \N1 ?[S.9 verso letzte Zeile] 
+%tataḥ paraṃ pralayakālīna--jvalad-dāvā---nala-pūrṇaṃ  bāhyābhyaṃtare  mahākāśaṃ lakṣaṃ karttavyaṃ// \D
+%tataḥ paraṃ pralayakālīna--jvalad-vṛ-----nala-pūrṇa---bāhyābhyaṃtare  mahākāśalakṣaṃ karttavyaṃ// \N2
+%tataḥ paraṃ pralayakālīta--jjala--vaḍavā-nala-pūrṇaṃ  bāhyābhyaṃtare  mahākāśaṃ lakṣyaṃ kartavyaṃ \U1
+%tataḥ       pralayakālīna--jvalad-vaḍavā-nala-pūrṇa---bāhyābhyaṃtare  ghanāṃ dhakārasadṛśaṃ mahākāśasya lakṣaṃ karttavyaṃ \U2
+%-----------------------------
+%Moreover, the fixation of the great space (\textit{mahākāśa}) which is the plethora of the burning fire of the time of dissolution shall be done internally and externally. 
+%-----------------------------SSP!
+\note[type=source, labelb=190, lem={\textbf{Re}}]{PT\textsuperscript{qcr \cdot YSV} (Ed. p. 839): kalpāntāgnisamaṃ (\textit{kālāntāgnisamaṃ} YK\textsuperscript{ccn \cdot YSV} 2.39cd Ed. p. 26) jyotir mahākāśaṃ smaret tathā |}
+\note[type=testium, labelb=191, lem={\textbf{Ri}}]{SSP 2.30 (Ed. p. 42): bāhyābhyantare kālānalasaṃkāśaṃ mahākāśam avalokayet |}
+tataḥ
+\app{\lem[wit={ceteri}]{paraṃ}
+  \rdg[wit={ceteri}]{U2}}
+pralayakālī\app{\lem[wit={ceteri},alt={°na}]{na}
+  \rdg[wit={B,L}]{°naḥ}
+}\app{\lem[wit={ceteri},alt={°jvalad°}]{jvalad}
+  \rdg[wit={P,B}]{°jalad°}
+  \rdg[wit={U1}]{°jjala°}
+}\app{\lem[wit={E,D},alt={°dāvā°}]{dāvā}
+    \rdg[wit={B,L,P,U1,U2}]{°vaḍavā°}
+    \rdg[wit={N1}]{°vṛddha°}
+    \rdg[wit={N2}]{°vṛ°}
+}nalapū\app{\lem[wit={ceteri},alt={°rṇaṃ}]{rṇaṃ}
+  \rdg[wit={N1,N2,U2}]{°rṇa}}
+bāhyābhyantare
+\app{\lem[wit={ceteri},alt={mahākāśa°}]{mahākaśa}
+  \rdg[wit={D,P,U1}]{mahākāśaṃ}
+  \rdg[wit={U2}]{ghanāṃ dhakārasadṛśaṃ mahākāśasya}
+}\app{\lem[wit={ceteri}, alt={°lakṣyaṃ}]{lakṣyaṃ}
+  \rdg[wit={B,D,L,N2,U2}]{°lakṣaṃ}}
+kartavvyaṃ/
+%-----------------------------
+%\om                                                                                                                         \E
+%tataḥ paraṃ bāhyābhyaṃtare koṭidīpānāṃ prakāśaprāptau  yādṛśam aujvalyaṃ bhavati   tādṛśaṃ   tatvākāśaṃ lakṣyaṃ karttavyaṃ  \P
+%tataḥ paraṃ bāhyābhyaṃtare koṭidīpānāṃ prakāśaprāpto   yādṛśam aujvalaṃ  bhavatī/  tādṛśaṃ   tatvāśa----lakṣaṃ kartavyaṃ//  \B
+%tataḥ paraṃ bāhyābhyaṃtare koṭidīpānāṃ prakāśaprāpto   yādṛśam  ujvalaṃ  bhavatī/  tādṛśaṃ   tatvāśa----lakṣaṃ kartavyaṃ    \L  
+%tataḥ paraṃ bāhyābhyaṃtare koṭidīpānāṃ prakāśaprāptau  yādṛśam aujvalyaṃ bhavati/  tādṛśaṃ   tatvākāśaṃ lakṣyaṃ kartavyaṃ// \N1
+%tataḥ paraṃ bāhyābhyaṃtare koṭidīpānāṃ prakāśaprāptau  yādṛśam aujvalyaṃ bhavati// tādṛśaṃ   tatvākāśaṃ lakṣaṃ kartavyaṃ//  \D
+%tataḥ paraṃ bāhyābhyaṃtare koṭidīpānāṃ prakāśaprāptau  yādṛśam aujvala   bhavati/  tādṛśaṃ   tatvākāśaṃ lakṣaṃ kartavyaṃ//  \N2
+%tataḥ paraṃ bāhyābhyaṃtare koṭidīpānāṃ prakāśaprāptau  yādṛśam aujvalaṃ  bhavati   tādṛśaṃ   tatvākāśaṃ lakṣyaṃ kartavyaṃ   \U1
+%tataḥ paraṃ bāhyābhyaṃtare koṭidīpānāṃ prakāśaprāptau  yādṛśem aujvalyaṃ bhavati   tādṛśaṃ// tatvākāśaṃ lakṣaṃ karttavyaṃ// \U2
+%-----------------------------
+%Then, internally and externally the brightness of millions of blazing lights arises, he shall execute the fixation [directed onto] the reality-space (\textit{tattvakāśa}) which is as such.   
+%-----------------------------SSP!
+tataḥ paraṃ bāhyābhyaṃtare koṭidīpānāṃ
+\note[type=philcomm, labelb=192, lem={\uproman{27}\textsuperscript{lowroman{7}-\lowroman{8}}}]{Sentences are omitted in \getsiglum{E}.}
+\note[type=testium, labelb=193, lem={\textbf{Ri}}]{SSP 2.30 (Ed. p. 42): bāhyābhyantare nijatatvakharūpaṃ tatvākāśam avalokayet |}
+\note[type=source, labelb=194, lem={\textbf{Re}}]{PT\textsuperscript{qcr \cdot YSV} (Ed. p. 839) = YK\textsuperscript{ccn \cdot YSV} 2.40ab (Ed. p. 26): koṭikoṭipradīpābhaṃ tattvākāśaṃ smaret tathā |}
+\app{\lem[wit={ceteri}]{prakāśaprāptau}
+  \rdg[wit={B,L}]{prakāśaprāpto}}
+yādṛśaṃ
+\app{\lem[wit={ceteri}]{aujvalyaṃ}
+  \rdg[wit={L}]{ujvalaṃ}}
+\app{\lem[wit={ceteri}]{bhavati}
+  \rdg[wit={B,L}]{bhavatī}}/
+tādṛśaṃ
+\app{\lem[wit={ceteri}]{tattvākāśaṃ}
+  \rdg[wit={B,L}]{tattvāśa°}}
+\app{\lem[wit={P,N1,U1}]{lakṣyaṃ}
+  \rdg[wit={B,D,L,N2,U2}]{lakṣaṃ}}
+kartavyaṃ/
+\end{prose}
+  \end{edition}
+  \begin{translation}
+    \ekddiv{type=trans}
+    \centerline{\textrm{\small{[\uproman{27}.\textsuperscript{\coro{\lowroman{1}-\lowroman{12}}}The Divisions of Space]}}}
+    \bigskip
+    \begin{tlate}
+      \noindent
+ Now the divisions of space are taught.\footnote{In contrast to the \textit{Yogatattvabindu}, \citetitle{ssplonavla} and the quotes of \textit{Yogasvarodaya} in the \citetitle{ramatosana} and \citetitle{yogakarnika}, the \citetitle{advaya} 7 (Ed. pp. 4-5) does not spaerate the practice of Madhyalakṣya and the five spaces. Here, both practices form a unified whole and follow a specific progression:
+\begin{quote}
+  atha madhyalakṣyalakṣaṇaṃ | prātaścitrādivarṇākhaṇḍasūryacakravat vahnijvālāvalīvat tadvihīnāntarikṣavat paśyati | tadākārākāritayā avatiṣṭhati | tadbhūyodarśanena guṇarahitākāśaṃ bhavati | visphurattārakākāradīpyamānagāḍhatamopamaṃ paramākāśaṃ bhavati | kālānalasamadyotamānaṃ mahākāśaṃ bhavati | sarvotkṛṣṭaparamadyutipradyotamānaṃ tattvākāśaṃ bhavati | koṭisūryaprakāśavaibhavasaṃkāśaṃ sūryākāśaṃ bhavati | evaṃ bāhyābhyantarasthavyomapañcakaṃ tārakalakṣyam | taddarśī vimuktaphalas tādṛgvyomasamāno bhavati | tasmāt tāraka eva lakṣyaṃ amanaskaphalapradaṃ bhavati || 7 ||
+\end{quote}
+\begin{quote}
+%Then, the characteristic of the central fixation: At daybreak he sees [that which is], like the bright etc. colourful indivisible and disc of the sun, like a row of flames of dire, like that [which is] free from the intermediate space between heaven and earth. He dwells in a state [in which he is mentally] assuming the form of the apparition of that. By [mentally] contemplating about that a space without qualities arises. Supreme space resembling absolute darkness  
+ Then, the description of Intermediate Introspection: He sees, at daybreak, like the vast disc of the Sun resplendent with variegated and other colours, like a huge conflagration of Fire and like the mid-etherial regions devoid of these. He stands with a form identical with theirs. By seeing them over and over again, there ensues Ether devoid of qualities; there ensues transcendent Ether resembling palpable darkness brought into relief by the splendour of the radiant Tāraka form; there ensues the great Ether shining like the fire of deluge; there ensues the Tattvākāśa (Ether of Verity) effulgent with transcendent lustre excelling; and there ensues the Ether of Sun dazzling with the splendour of a hundred thousand Suns. Thus the five Ethers, external and internal, become visible to the Introspection of a Tāraka-yogin. He who sees it, released from fruits, becomes like such Ether. Hence the Introspectuion of Tāraka alone becomes the bestower of the fruit of non-mindedness.  
+(\citeauthor[1938:4]{yogaupaniṣads})
+\end{quote}} The fixations of them are taught: Space, beyond space, great space, space of reality, the space of the sun. The fixation onto the pure and formless space \textit{akāśa} shall be done internally as well as externally. Therafter, the fixation of the beyond-space \textit{parākāśa} which is equal to dense darkness\footnote{Instead of extreme brightness as in the \citetitle{ssplonavla} (Ed. p. 29) and \citetitle{advaya} (Ed. p. 5), Rāmacandra has choosen dense darkness to characterize his \textit{parākāśa}-visualization.} shall be done internally and externally. Then, the fixation of the great space (\textit{mahākāśa}) which is the plethora of the burning fire of the time of dissolution shall be done internally and externally. Then, when internally and externally the brightness of millions of blazing lights arises, he shall execute the fixation [directed onto] the reality-space (\textit{tattvakāśa}) which is as such.\end{tlate}
+  \end{translation}
+\end{alignment}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%PAGEBREAK%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%PAGEBREAK%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%PAGEBREAK%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
+\begin{alignment}[
+  texts=edition[class="edition"];
+  translation[class="translation"],
+  ]
+  \begin{edition}
+    \ekddiv{type=ed}
+    \begin{prose}
+      \noindent
+%-----------------------------
+%tataḥ        bāhyābhyantare  prakāśa-mānayarsūsahitaṃ        sūryākāśaṃ lakṣyaṃ karttavyam/ \E [p.39]
+%tataḥ paścād bāhyābhyaṃtare  prakāśa-māgasūryaṃ biṃbasahitaṃ sūryākāśalakṣyaṃ   karttavyaṃ ... \P
+%      paccā  bāhyābhyaṃtare  prakāśa-mān sūryabiṃbasahita----sūryakāśalakṣaṃ    kartavyaṃ mataḥ ... \B
+%      paccā  bāhyābhyaṃtare  prakāśa-mān sūryabiṃbasahita----sūryakāśalakṣaṃ    kartavyaṃ mataḥ ... \L 
+%tataḥ paścāt bāhyābhyaṃtare  prakāśa-mānasūryabiṃbasahitaṃ   sūryakāśaṃ lakṣyaṃ karttavyaṃ// \N1
+%tataḥ paścāt bāhyābhyaṃtare  prakāśa-mānasūryabiṃbasahitaṃ   sūryakāśaṃ lakṣyaṃ karttavyaṃ// \D
+%tataḥ paścād     ābhyaṃtare  prakāśa-mānasūryabiṃbasahitaṃ   sūryakāśaṃ lakṣaṃ  karttavyaṃ// \N2
+%tataḥ paścāt bāhyabhyaṃttare prakāśa-mānasūryabiṃbasāhitaṃ   sūryakāśaṃ lakṣyaṃ karttavyaṃ \U1
+%tataḥ paścād bāhyābhyaṃtare  prakāśa-mānasūryabiṃbasāhitaṃ   sūryākāśaṃ lakṣyaṃ karttavyaṃ// \U2
+%-----------------------------
+%After that the fixation of the sun-space (\textit{sūryakāśa}) which is associated with sundisk's appearance of light shall be done internally and externally.   
+%-----------------------------SSP!
+\note[type=testium, labelb=195, lem={\textbf{Ri}}]{SSP 2.30 (Ed. p. 42): atha vā bāhyābhyantare sūryakoṭisadṛśaṃ sūryākāśam avalokayet |}
+\note[type=source, labelb=196, lem={\textbf{Re}}]{PT\textsuperscript{qcr \cdot YSV} (Ed. p. 839): sūryākāśaṃ tathā koṭisūryavindusamaṃ (\textit{°bimbasamaṃ} YK\textsuperscript{ccn \cdot YSV} 2.40d Ed. p. 26) smaret | sabāhyābhyantare caivam ākāśaṃ (\textit{caiva sākāśaṃ} YK\textsuperscript{ccn \cdot YSV} 2.41b Ed. p. 26) lakṣayet tu yaḥ |}
+\app{\lem[wit={ceteri}]{tataḥ}
+  \rdg[wit={B,L}]{\om}}
+\app{\lem[wit={ceteri}, alt={paścād}]{paścā\skp{d-bā}}
+  \rdg[wit={N1,N2,U1}]{paścāt}
+  \rdg[wit={B,L}]{paccā}
+  \rdg[wit={E}]{\om}}
+\app{\lem[wit={ceteri},alt={bāhyābhyaṃtare}]{\skm{d-bā}hyābhyaṃtare}
+  \rdg[wit={N2}]{ābhyaṃtare}}
+\app{\lem[wit={ceteri},alt={prakāśamāna°}]{prakāśamāna}
+  \rdg[wit={P}]{prakāśamāga°}
+  \rdg[wit={B,L}]{prakāśamān}
+}\app{\lem[wit={ceteri},alt={°sūrya°}]{sūrya}
+  \rdg[wit={E}]{°yarsū°}
+  \rdg[wit={P}]{°sūryaṃ}
+}\app{\lem[wit={ceteri},alt={°bimba°}]{bimba}
+  \rdg[wit={E}]{\om}
+}\app{\lem[wit={ceteri},alt={°sahitaṃ}]{sahitaṃ}
+  \rdg[wit={B,L}]{°sahita°}}
+\app{\lem[wit={ceteri}]{sūryakāśaṃ}
+  \rdg[wit={B,L,P}]{sūryakāśa°}}
+\app{\lem[wit={ceteri}]{lakṣyaṃ}
+  \rdg[wit={B,L,N2}]{lakṣaṃ}}
+\app{\lem[wit={ceteri}]{kartavyaṃ}
+  \rdg[wit={B,L}]{kartavyaṃ mataḥ}}/      
+%-----------------------------
+%eteṣāṃ lakṣyāṇāṃ kāraṇāt   śarīraṃ rogāsaṃsargi    bhavati// \E
+%eteṣāṃ lakṣāṇāṃ  karaṇāt   śarīre  rogasaṃsargo na bhavati \P %%%7651.jpg
+%eteṣāṃ lakṣaṇaṃ  karaṇāt// śarīre  rogasaṃsargo na bhavatī/ \B
+%eteṣāṃ lakṣaṃ    karaṇāt   śarīre  rogasaṃsargo na bhavati... \L
+%eteṣāṃ lakṣyaṇāṃ karaṇāt   śarīra--rohasaṃsarge na bhavati/ \N1
+%eteṣāṃ lakṣyāṇāṃ karaṇāt   śarīra--rohasaṃsargo na bhavati// \D
+%eteṣāṃ lakṣāṇā---kāraṇāc---charīra-rogāsaṃsargo na bhavati// \N2
+%eteṣāṃ lakṣyāṇāṃ karaṇāt   śarīra--rogāsaṃsargo na bhavati \U1
+%eteṣāṃ lakṣyāṇāṃ karaṇāt// śarīre  rogāsaṃsargo na bhavati \U2
+%-----------------------------
+%From the execution of these fixations contact of diseases does not arise within the body. 
+%-----------------------------
+\note[type=source, labelb=196, lem={\textbf{Re}}]{PT\textsuperscript{qcr \cdot YSV} (Ed. p. 839): śivavad vihare dviśve pāpapuṇyavivarjitaḥ | eteṣāñ caiva lakṣeṇa karmadvārā 'ghamāharet (\textit{karmmadvārānapāharet} YK\textsuperscript{ccn \cdot YSV} 2.41d Ed. p. 26) |}
+eteṣāṃ \app{\lem[wit={ceteri}]{lakṣyāṇāṃ}
+  \rdg[wit={P}]{lakṣāṇāṃ}
+  \rdg[wit={B}]{lakṣaṇaṃ}
+  \rdg[wit={L}]{lakṣaṃ}
+  \rdg[wit={N2}]{lakṣāṇā}}
+\app{\lem[wit={N2}, alt={kāraṇāc}]{kāraṇā\skp{c-cha}}
+  \rdg[wit={E}]{kāraṇāt}
+  \rdg[wit={ceteri}]{karaṇāt}
+}\app{\lem[wit={N2}, alt={charīre}]{\skm{c-cha}rīre}
+  \rdg[wit={D,N1}]{śarīra°}
+  \rdg[wit={B,P,L,U2}]{śarīre}
+  \rdg[wit={E}]{°śarīraṃ}}
+\app{\lem[wit={ceteri}, alt={rogāsaṃsargo}]{rogāsaṃsargo}
+  \rdg[wit={E}]{rogāsaṃsargi}}
+\app{\lem[wit={ceteri}]{na}
+  \rdg[wit={E}]{\om}}
+\app{\lem[wit={ceteri}]{bhavati}
+  \rdg[wit={B}]{bhavatī}}/\textsuperscript{\begin{otherlanguage}{english}\coro{[\lowroman{10}]}\end{otherlanguage}}
+% -----------------------------
+%tathā valitapalitaṃ   puṇyaṃ pāpaṃ    na bhavati//    \E
+%tathā valitapalitaṃ   puṇyāṃ pāpaṃ ca na bhavati   \P
+%tathā// valitapalitaṃ puṇyāṃ pāpaṃ ca na bhavatī// \B
+%tathā valitaṃ palitaṃ puṇyāṃ pāpaṃ ca na bhavatī// \L
+%tathā valitaṃ palitaṃ puṇyaṃ pāpaṃ ca na bhavati// \N1
+%tathā valitaṃ palitaṃ puṇyaṃ pāpaṃ ca na bhavati// \D
+%tathā valitaṃ palitaṃ puṇyaṃ pāpaṃ ca na bhavati// \N2
+%tathā valitaṃ palitaṃ puṇyaṃ pāpaṃ ca na bhati \U1
+%tathā valīpalitaṃ     puṇyaṃ pāpaṃ ca na bhavati \U2
+%-----------------------------
+%Thus wrinkles and grey hair, sin or merit does not arise. 
+%-----------------------------
+tathā
+\app{\lem[wit={D,L,N1,N2}, alt={valitaṃ palitaṃ}]{valitaṃ palitaṃ}
+  \rdg[wit={N2}]{valīpalitaṃ}
+  \rdg[wit={B,E,P}]{valitapalitaṃ}}
+\app{\lem[wit={ceteri}]{puṇyaṃ}
+  \rdg[wit={B,L}]{puṇyāṃ}}
+pāpaṃ
+\app{\lem[wit={ceteri}]{ca}
+  \rdg[wit={E}]{\om}}
+na
+\app{\lem[wit={ceteri}]{bhavati}
+  \rdg[wit={B,L}]{bhavatī}
+  \rdg[wit={U1}]{bhati}}/
+\end{prose}
+\begin{tlg}
+% -----------------------------
+%          navacakraṃ kalādhāraṃ trilakṣyaṃ vyomapaṃcakam/ \E
+%          navacakraṃ kalādhāraṃ trilakṣyaṃ vyomapaṃcakaṃ  \P
+%śloka     navacakraṃ kalādhāraṃ trilakṣaṃ  vyomapaṃcakam/ \B
+%//śloka// navacakraṃ kalādhāraṃ trilakṣaṃ  vyomapaṃcakam... \L %%%%%%%%%%%%GREP THIS%%%%%%%%%%%%% SSP 2.31!!!
+%          navacakra--kalādhāraṃ trilakṣyaṃ vyomapaṃcakaṃ/ \N1
+%          navacakra--kalādhāraṃ trilakṣyaṃ vyomapaṃcakaṃ// \D
+%          navacakra--kalādhāraṃ trilakṣaṃ  vyomapaṃcakaṃ/ \N2
+%          navacakraṃ kalādhāraṃ trilakṣyaṃ vyomapaṃcakaṃ \U1 %%%282.jpg
+%          navacakraṃ kalādhāraṃ trilakṣyaṃ vyomapaṃcakaṃ// \U2
+%-----------------------------
+%The nine cakras, the sixteen Adhāras, the three lakṣyas and die five spaces. 
+%-----------------------------
+\tl{
+\app{\lem[wit={ceteri}]{navacakraṃ}
+  \rdg[wit={B,L}]{śloka navacakraṃ}
+  \rdg[wit={D,N1,N2}]{navacakra°}}
+kalādhāraṃ
+\note[type=source, labelb=197, lem={\textbf{Ri}}]{\citetitle{netratantra} 7.1: ataḥ paraṃ pravakṣyāmi dhyānaṃ sūkṣmam anuttamam | ṛtucakraṃ svarādhāraṃ trilakṣyaṃ vyomapañcakam |}
+\note[type=testium, labelb=197a, lem={\textbf{Ri}}]{SSP 2.31 (Ed. p. 43): navacakraṃ kalādhāraṃ trilakṣyaṃ vyomapañcakam | samyag etan na jānāti sa yogī nāmadhārakaḥ |}
+\note[type=testium, labelb=198, lem={\textbf{Re}}]{PT\textsuperscript{qcr \cdot YSV} (Ed. p. 832): navacakraṃ kalādhāraṃ trilakṣaṃ vyomapañcakam | svadehe yo na jānāti sa yogī nāmadhārakaḥ |}
+\note[type=testium, labelb=198a, lem={\textbf{Re}}]{PT\textsuperscript{qcr \cdot YSV} (Ed. p. 839): navacakraṃ kalādhāraṃ dvilakṣaṃ vyomapañcakam | samagraṃ yo na jānāti sa yogī nāmadhārakaḥ |}
+\app{\lem[wit={ceteri}, alt={°kṣyaṃ}]{trilakṣyaṃ}
+    \rdg[wit={B,L,N2}]{trilakṣaṃ}}
+  vyomapaṃcakaṃ/}\\
+%-----------------------------
+%svadehe yo na jānāti sa yogī nāmadhārakaḥ//       \E
+%svadehe yo na jānāti sa yogī nāmadhārakaḥ 1       \P
+%svadehe yo na jānāti sa yogī nāmadhārakaḥ//1//    \B
+%svadehe yo na jānāti sa yogī nāmadhārakaḥ//1//   \L
+%samakriyā  na jānāti sa yogī nāmadhāraka//           \N1
+%samakriyā  na jānāti sa yogī nāmadhārakaḥ//           \D
+%samakriyā  na jānāti sa yogī nāmadhāraka//           \N2
+%samakriyā  na jānāti sa yogī nāmadhārakaḥ            \U1
+%svadehe yo na jānāti sa yogī nāmadhārakaḥ        \U2
+%-----------------------------
+%Who does not know [them?] within ones own body, he is only a Yogin by name. 
+%-----------------------------
+\tl{\app{\lem[wit={ceteri}]{svadehe yo}
+  \rdg[wit={D,N1,N2,U1}]{samakriyā}} 
+na jānāti sa yogī nāmadhārakaḥ\dd{}}\textsuperscript{\begin{otherlanguage}{english}\coro{[\lowroman{12}]}\end{otherlanguage}}
+\end{tlg}
+  \end{edition}
+  \begin{translation}
+    \ekddiv{type=trans}
+    \begin{tlate}
+\noindent
+After that the fixation of the sun-space (\textit{sūryakāśa}) which is associated with sundisk's appearance of light shall be done internally and externally. From the execution of these fixations contact of diseases does not arise within the body. Thus wrinkles and grey hair, sin or merit do not arise.
+ 
+\paragraph{\uproman{27}.\textsuperscript{\lowroman{12}}.} The nine Cakras, the sixteen Adhāras, the three Lakṣyas and die five spaces. Who does not know [them?] within ones own body, he is only a Yogin by name.
+    \end{tlate}
+  \end{translation}
+\end{alignment}
+
+
 \chapter{Bibliography}
  \label{sec:bibli}
    \clearpage
@@ -643,4 +1052,7 @@ yāte sātvik upajai āī | madhya lakṣa jo sādhai bhāī || 28 ||\end{quote}
 \printbibliography[heading=subbibintoc, title=Online Sources, keyword=onlinesource]
 
 \end{document}
+
+
+
 
