--- a/bindu.bib
+++ b/bindu.bib
@@ -17,6 +17,19 @@
   keywords={seclit},
 }
 
+@book{netraflood,
+  title={Netratantra},
+  subtitle={The Lord of Immortality: An Introduction, Critical Edition, and Translation of the Netra Tantra}, 
+  author={Flood, Gavin and Wernicke-Olesen, Bjarne and Khatiwoda, Rajan},
+  series={Tantric Studies Series},
+  volume={1}, 
+  year={forthcoming}, 
+  publisher={Routledge},
+  address={London},
+  keywords={seclit},
+}
+
+
 @book{hauschild1927,
   title={Śvetāśvatara Upaniṣad},
   subtitle={Die Śvetāśvatara-Upaniṣad: Eine kritische Ausgabe mit einer Übersetzung und einer Übersicht über ihre Lehren},
@@ -27,8 +40,29 @@
   keywords={printsource},
 }
 
+@book{tantraloka,
+  title={Tantrāloka},
+  subtitle={The Tantrāloka of Abhinavagupta. With Commentary Viveka by Jayadratha. In 8 volumes.},
+  editor={Dwivedi, R.C. and Rastogi, Navjivan},
+  year={1987 (First Edition 1918-1938},
+  publisher={Motilal Banarsidass},
+  address={Delhi},
+  keywords={printsource},
+}
+
+@book{manthana,
+  title={Manthānabhairavatantram Kumārikākhaṇḍaḥ},
+  subtitle={The Section Concerning the Virgin Goddess of the Tantra of the Churning-Bhairava},
+  editor={Dyczkowski, Mark S.G.},
+  year={2009},
+  note={13 vols},
+  publisher={IGNCA and D.K. Printworld},
+  address={New Delhi},
+  keywords={printsource},
+}
+
 @book{fausta1976,
-title={Das Gorakṣaśataka},
+title={Gorakṣaśataka (Nowotny)},
 author={Gorakṣanātha},
 editor={Nowotny, Fausta}, 
 series={Band 3 von Dokumente der Geistesgeschichte},
@@ -169,8 +203,6 @@ vārttikamarīcibhiḥ sahitaḥ},
   publisher={Indica et Tibetica},
   keywords={printsource},
 }
-
-
 
 @book{yajnavalkya,
   title={Yogayājñavalkya},
@@ -885,6 +917,17 @@ note={Presented at the Conference of the Society for Tantric Studies, Flagstaff,
    keywords={printsource},
  }
 
+@book{shivayogapradipika,
+   title={Śivayogapradīpikā},
+   subtitle={A Lamp on Śivayoga: The Union of Yoga, Ritual, and Devotion in the Śivayogapradīpikā},
+   editor={Powell, Seth David},   
+   year={2023},
+   note={Dissertation as submitted on April 2023}, 
+   publisher={Harvard University},
+   address={Cambridge, Massachusetts},
+   keywords={printsource},
+ }
+
 @Misc{shivasam,
    note={Śivasaṃhita: \cite{mallinson2007}},
    shorthand={ŚS},
@@ -904,7 +947,8 @@ note={Presented at the Conference of the Society for Tantric Studies, Flagstaff,
 } 
 
 @book{peterson1888,
-   title={The Paddhati of Śārngadhara: A Sanskrit Anthology},
+   title={Śārngadharapaddhati},
+   subtitle={The Paddhati of Śārngadhara: A Sanskrit Anthology},
    author={Śārṅgadhara},
    year={1888},
    editor={Peterson, Peter},
@@ -1124,7 +1168,8 @@ address={Pondicherry},
 }
 
 @book{yogatarangini,
-  title={Yoga-Taraṅgiṇī: A Rare commentary on Gorakṣa-śataka},
+  title={Yogataraṅgiṇī},
+  subtitle={Yoga-Taraṅgiṇī: A Rare commentary on Gorakṣa-śataka},
   editor={Brezinski, Jan K.},
   year={2015},
   publisher={Motilal Banarsidass},
@@ -1420,6 +1465,12 @@ subtitle={The Niśvāsatattvasaṃhitā: The Earliest Surviving Śaiva Tantra},
    keywords={printsource},
 }
 
+@book{yogacudamani,
+   title={Yogacūḍāmaṇyupaniṣad},
+   note={see Yoga Upaniṣads}, 
+   keywords={printsource},
+}
+
 @book{dhyanabind,
    title={Dhyānabindopaniṣad},
    note={see Yoga Upaniṣads}, 
@@ -1635,7 +1686,7 @@ https://sanskritdocuments.org/doc_upanishhat/saubhagya.pdf
 }
 
 @online{mandalabrah,
-  title = {Maṇḍalabrāhaṇopaniṣat},
+  title = {Maṇḍalabrāhmaṇopaniṣat},
   organization = {Muktabodha Indological Research Institute (MIRI)},
   editor={Śāstri, Mahādeva}, 
   howpublished = {\url{https://www.muktabodha.org/}},
