--- a/bindux.tex
+++ b/bindux.tex
@@ -9320,7 +9320,7 @@ tanmadhye punar-ābhyāsa\app{\lem[wit={E,P,U2}, alt={°karaṇān}]{karaṇā\s
 %tayoḥ saṃccārāt madhye graṃthitrayaṃ trudyati   tatroṭaṇāt        pavanaḥ brahmakamalamadhye pūrṇo bhūtvā tiṣṭhati   tato vīryastaṃbho bhavati/  puruṣaḥ sadaiva   yuvaivaṃ  bhavati \U1
 %tayoḥ saṃccārān madhye graṃthitrayaṃ truṭyati// tattroṭaṇāt       pavanaḥ brahmakamalamadhye pūrṇo bhūtvā tiṣṭhati// tato vīryastaṃbho bhavati   puruṣaḥ sadaiva   vaibhavo  bhavati// \U2
 %-----------------------------
-%Caused by the transition of them both into the center the trinity of knots breaks. There from the breaking of that, the vitalwind after having filled up (the central channel?) resides in the center og the Brahma-lotus. Then virility and strength arises. The person becomes youthful forever. 
+%Caused by the transition of them both into the center the trinity of knots breaks. There from the breaking of that, the vitalwind after having filled up (the central channel?) resides in the center of the Brahma-lotus. Then virility and strength arises. The person becomes youthful forever. 
 %-----------------------------
 \app{\lem[wit={ceteri}]{tayoḥ}
   \rdg[wit={B}]{tayo}}
