--- a/preamble.tex
+++ b/preamble.tex
@@ -61,7 +61,8 @@
 %\usepackage{bigfoot}
 %%% more functions
 \usepackage[dvipsnames]{xcolor}
-%\usepackage[flushmargin]{footmisc}
+% \usepackage[flushmargin]{footmisc}
+%\usepackage[para,perpage]{footmisc}
 
 %%%für den Counter von Kapiteln und Sätzen! 
 \newcommand{\uproman}[1]{\uppercase\expandafter{\romannumeral#1}}
